Material design (Authorization form)

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -53,4 +53,5 @@
     <string name="empty_login_error_text">Логин не указан!</string>
     <string name="empty_password_error_text">Пароль не указан!</string>
     <string name="request_to_server">Запрос на сервер...</string>
+    <string name="question_exit_text">Вы действительно хотите выйти?</string>
 </resources>
