--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="empty_login_error_text">Login is not specified!</string>
     <string name="empty_password_error_text">Password is not specified!</string>
     <string name="request_to_server">Request to the server...</string>
+    <string name="question_exit_text">Do you really want to get out?</string>
 </resources>
