--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -57,4 +57,6 @@
     <string name="ok_text">Ok</string>
     <string name="quantity_full_text">Количество</string>
     <string name="apply_text">Подтвердить</string>
+    <string name="complete_and_send_text">Завершить и отправить в 1С</string>
+    <string name="add_more_text">Добавить\nещё</string>
 </resources>
